Update swagger items for exam
